[KARAF-1019] Fix perm option management on Windows
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.2.x@1213215 13f79535-47bb-0310-9956-ffa450edef68